Cleans up the S3 directory (first pass) and fixes some failing tests in IAM, DynamoDB, and Glue.

--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -55,6 +55,7 @@ cross_PAM:
     PHP:
       versions:
         - sdk_version: 3
+          github: php/applications/photo_asset_manager
           block_content: cross_PAM_PHP_block.xml
     Rust:
       versions:
