--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -2886,3 +2886,46 @@ s3_Scenario_UseChecksums:
                 - s3.java2.basicOpsWithChecksums.multiPartS3Client
   services:
     s3: {CreateMultipartUpload, UploadPart, CompleteMultipartUpload}
+s3_CreateMultiRegionAccessPoint:
+  title: Create an &S3; Multi-Region Access Point using an &AWS; SDK
+  title_abbrev: Create a Multi-Region Access Point
+  synopsis: create an &S3; Multi-Region Access Point.
+  category:
+  languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/s3
+          sdkguide: sdk-for-kotlin/latest/developer-guide/use-services-s3-mrap.html
+          excerpts:
+            - description: Configure the S3 control client to send request to the us-west-2 Region.
+              snippet_tags:
+                - s3.kotlin.mrap.create-s3controlclient
+            - description: Create the Multi-Region Access Point.
+              snippet_tags:
+                - s3.kotlin.mrap.create
+            - description: Wait for the Multi-Region Access Point to become available.
+              snippet_tags:
+                - s3.kotlin.mrap.check-operation-status
+  services:
+    s3: {CreateMultiRegionAccessPoint}
+s3_GetObject_MRAP:
+  title: Get an &S3; object from a Multi-Region Access Point by using an &AWS; SDK
+  title_abbrev: Get an object from a Multi-Region Access Point
+  synopsis: get an object from a Multi-Region Access Point.
+  category:
+  languages:
+    Kotlin:
+      versions:
+        - sdk_version: 1
+          github: kotlin/services/s3
+          sdkguide: sdk-for-kotlin/latest/developer-guide/use-services-s3-mrap.html
+          excerpts:
+            - description: Configure the S3 client to use the Asymmetric Sigv4 (Sigv4a) signing algorithm.
+              snippet_tags:
+                - s3.kotlin.mrap.create-s3client
+            - description: Use the Multi-Region Access Point ARN instead of a bucket name to retrieve the object.
+              snippet_tags:
+                - s3.kotlin.mrap.getobject
+  services:
+    s3: {GetObject}
