Add DeleteAgent examples

--- a/javav2/example_code/bedrock-agent/src/main/resources/config.properties
+++ b/javav2/example_code/bedrock-agent/src/main/resources/config.properties
@@ -1,3 +1,6 @@
 region = us-east-1
-agentId = <your agent id>
-agentVersion = <your agent version>
+foundationModel = anthropic.claude-v2
+
+agentId =      <id of an existing agent>
+agentVersion = <version of an existing agent>
+agentRoleArn = <arn of an existing role for the agent to assume>
