--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -32,7 +32,7 @@ jobs:
           python3 -m pip install -r .tools/base_requirements.txt
       - name: Lint metadata files
         run: >-
-          yamllint --format standard -c .tools/validation/.yamllint.yaml .doc_gen/metadata .tools/validation/sdks.yaml .tools/validation/services.yaml
+          yamllint --format standard -c .tools/validation/.yamllint.yaml .doc_gen/metadata
       - name: Validate metadata and repo
         run: >-
           python3 .tools/validation/validate.py --doc-gen .doc_gen
