Revert "Fix and consolidate Bedrock example structure"

--- a/.doc_gen/metadata/bedrock_metadata.yaml
+++ b/.doc_gen/metadata/bedrock_metadata.yaml
@@ -50,7 +50,7 @@ bedrock_GetFoundationModel:
 
 bedrock_ListFoundationModels:
   title: List the available &BRlong; foundation models using an &AWS; SDK
-  title_abbrev: List &BR; foundation models
+  title_abbrev: List available &BR; foundation models
   synopsis: list available &BR; foundation models.
   category:
   languages:
