--- a/.doc_gen/metadata/dynamodb_metadata.yaml
+++ b/.doc_gen/metadata/dynamodb_metadata.yaml
@@ -369,6 +369,7 @@ dynamodb_BatchWriteItem:
               snippet_tags:
                 - gov2.dynamodb.TableBasics.struct
                 - gov2.dynamodb.BatchWriteItem
+                - gov2.dynamodb.Movie.struct
     Java:
       versions:
         - sdk_version: 2
@@ -616,6 +617,7 @@ dynamodb_PutItem:
               snippet_tags:
                 - gov2.dynamodb.TableBasics.struct
                 - gov2.dynamodb.PutItem
+                - gov2.dynamodb.Movie.struct
     Kotlin:
       versions:
         - sdk_version: 1
@@ -753,6 +755,7 @@ dynamodb_GetItem:
               snippet_tags:
                 - gov2.dynamodb.TableBasics.struct
                 - gov2.dynamodb.GetItem
+                - gov2.dynamodb.Movie.struct
     Kotlin:
       versions:
         - sdk_version: 1
@@ -880,6 +883,7 @@ dynamodb_UpdateItem:
               snippet_tags:
                 - gov2.dynamodb.TableBasics.struct
                 - gov2.dynamodb.UpdateItem
+                - gov2.dynamodb.Movie.struct
     Kotlin:
       versions:
         - sdk_version: 1
@@ -999,6 +1003,7 @@ dynamodb_DeleteItem:
               snippet_tags:
                 - gov2.dynamodb.TableBasics.struct
                 - gov2.dynamodb.DeleteItem
+                - gov2.dynamodb.Movie.struct
     Kotlin:
       versions:
         - sdk_version: 1
@@ -1287,6 +1292,7 @@ dynamodb_Query:
               snippet_tags:
                 - gov2.dynamodb.TableBasics.struct
                 - gov2.dynamodb.Query
+                - gov2.dynamodb.Movie.struct
     Kotlin:
       versions:
         - sdk_version: 1
@@ -1427,6 +1433,7 @@ dynamodb_Scan:
               snippet_tags:
                 - gov2.dynamodb.TableBasics.struct
                 - gov2.dynamodb.Scan
+                - gov2.dynamodb.Movie.struct
     Kotlin:
       versions:
         - sdk_version: 1
@@ -1575,6 +1582,9 @@ dynamodb_ExecuteStatement:
             - description: Use a DELETE statement to delete an item.
               snippet_tags:
                 - gov2.dynamodb.ExecuteStatement.Delete
+            - description: Define a Movie struct that is used in this example.
+              snippet_tags:
+                - gov2.dynamodb.Movie.struct
     JavaScript:
       versions:
         - sdk_version: 3
@@ -1694,6 +1704,9 @@ dynamodb_BatchExecuteStatement:
             - description: Use batches of DELETE statements to delete items.
               snippet_tags:
                 - gov2.dynamodb.BatchExecuteStatement.Delete
+            - description: Define a Movie struct that is used in this example.
+              snippet_tags:
+                - gov2.dynamodb.Movie.struct
     JavaScript:
       versions:
         - sdk_version: 3
@@ -1854,14 +1867,17 @@ dynamodb_Scenario_GettingStartedMovies:
         - sdk_version: 2
           github: gov2/dynamodb
           excerpts:
-            - description: Create a struct and methods that call &DDB; actions.
-              snippet_tags:
-                - gov2.dynamodb.TableBasics.complete
             - description:
                 Run an interactive scenario to create the table and perform
                 actions on it.
               snippet_tags:
                 - gov2.dynamodb.Scenario_GettingStartedMovies
+            - description: Define a Movie struct that is used in this example.
+              snippet_tags:
+                - gov2.dynamodb.Movie.struct
+            - description: Create a struct and methods that call &DDB; actions.
+              snippet_tags:
+                - gov2.dynamodb.TableBasics.complete
     Kotlin:
       versions:
         - sdk_version: 1
@@ -2061,18 +2077,20 @@ dynamodb_Scenario_PartiQLSingle:
         - sdk_version: 2
           github: gov2/dynamodb
           excerpts:
+            - description: Run a scenario that creates a table and runs PartiQL queries.
+              snippet_tags:
+                - gov2.dynamodb.Scenario_PartiQLSingle
+            - description: Define a Movie struct that is used in this example.
+              snippet_tags:
+                - gov2.dynamodb.Movie.struct
             - description:
-                Create a struct that is a receiver for methods that can run
-                PartiQL statements.
+                Create a struct and methods that run PartiQL statements.
               snippet_tags:
                 - gov2.dynamodb.PartiQLRunner.struct
                 - gov2.dynamodb.ExecuteStatement.Insert
                 - gov2.dynamodb.ExecuteStatement.Select
                 - gov2.dynamodb.ExecuteStatement.Update
                 - gov2.dynamodb.ExecuteStatement.Delete
-            - description: Run a scenario that creates a table and runs PartiQL queries.
-              snippet_tags:
-                - gov2.dynamodb.Scenario_PartiQLSingle
     Kotlin:
       versions:
         - sdk_version: 1
@@ -2187,8 +2205,15 @@ dynamodb_Scenario_PartiQLBatch:
           github: gov2/dynamodb
           excerpts:
             - description:
-                Create a struct that is a receiver for methods that can run
-                PartiQL statements.
+                Run a scenario that creates a table and runs batches of
+                PartiQL queries.
+              snippet_tags:
+                - gov2.dynamodb.Scenario_PartiQLBatch
+            - description: Define a Movie struct that is used in this example.
+              snippet_tags:
+                - gov2.dynamodb.Movie.struct
+            - description:
+                Create a struct and methods that run PartiQL statements.
               snippet_tags:
                 - gov2.dynamodb.PartiQLRunner.struct
                 - gov2.dynamodb.BatchExecuteStatement.Insert
@@ -2196,11 +2221,6 @@ dynamodb_Scenario_PartiQLBatch:
                 - gov2.dynamodb.ExecuteStatement.Select.Projected
                 - gov2.dynamodb.BatchExecuteStatement.Update
                 - gov2.dynamodb.BatchExecuteStatement.Delete
-            - description:
-                Run a scenario that creates a table and runs batches of
-                PartiQL queries.
-              snippet_tags:
-                - gov2.dynamodb.Scenario_PartiQLBatch
     Kotlin:
       versions:
         - sdk_version: 1
