--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -257,6 +257,14 @@ bedrock-runtime_InvokeLlama2:
             - description: Invoke the Meta Llama 2 Chat foundation model to generate text.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_llama2.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Meta Llama 2 Chat foundation model to generate text.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/actions/invoke-llama2.js
     PHP:
       versions:
         - sdk_version: 3
