--- a/javascriptv3/example_code/bedrock-runtime/package.json
+++ b/javascriptv3/example_code/bedrock-runtime/package.json
@@ -11,6 +11,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.489.0"
   },
   "devDependencies": {
-    "vitest": "^1.1.3"
+    "vitest": "^1.2.1",
+    "zod": "^3.22.4"
   }
 }
