Update Bedrock service names to the approved ones.

--- a/.doc_gen/metadata/services.yaml
+++ b/.doc_gen/metadata/services.yaml
@@ -289,7 +289,7 @@ bedrock:
   bundle: bedrock
   long: '&BRlong;'
   short: '&BR;'
-  sort: Bedrock
+  sort: Bedrock1
   expanded:
     long: Amazon Bedrock
     short: Amazon Bedrock
@@ -305,7 +305,7 @@ bedrock-runtime:
   bundle: bedrock
   long: '&BRRUNlong;'
   short: '&BRRUN;'
-  sort: Bedrock Runtime
+  sort: Bedrock2
   expanded:
     long: Amazon Bedrock Runtime
     short: Amazon Bedrock Runtime
@@ -321,10 +321,10 @@ bedrock-agent:
   bundle: bedrock
   long: '&BRAlong;'
   short: '&BRA;'
-  sort: Bedrock Agents
+  sort: Bedrock3
   expanded:
     long: Agents for Amazon Bedrock
-    short: Amazon Bedrock Agents
+    short: Agents for Amazon Bedrock
   blurb: offer you the ability to build and configure autonomous agents in your application.
   guide:
     subtitle: User Guide
@@ -337,10 +337,10 @@ bedrock-agent-runtime:
   bundle: bedrock
   long: '&BRARUNlong;'
   short: '&BRARUN;'
-  sort: Bedrock Agents Runtime
+  sort: Bedrock4
   expanded:
     long: Agents for Amazon Bedrock Runtime
-    short: Amazon Bedrock Agents Runtime
+    short: Agents for Amazon Bedrock Runtime
   blurb: offers you the ability to run autonomous agents in your application.
   guide:
     subtitle: User Guide
