--- a/.doc_gen/metadata/iot_metadata.yaml
+++ b/.doc_gen/metadata/iot_metadata.yaml
@@ -1,4 +1,21 @@
 # zexi 0.4.0
+iot_Hello:
+  title: Hello &IoT;
+  title_abbrev: Hello &IoT;
+  synopsis: get started using &IoT;.
+  category: Hello
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.hello_iot.main
+  services:
+    iot: {listThings}
 iot_DescribeEndpoint:
   title: Get information about an endpoint using an &AWS; SDK
   title_abbrev: Get endpoint information
