playing with strings in yaml

--- a/.doc_gen/metadata/medical-imaging_metadata.yaml
+++ b/.doc_gen/metadata/medical-imaging_metadata.yaml
@@ -1001,7 +1001,10 @@ medical-imaging_Scenario_TaggingImageSets:
 medical-imaging_Scenario_ImageSetsAndFrames:
   title: Get started with &AHI; image sets and image frames using an &AWS; SDK
   title_abbrev: Get started with image sets and image frames
-  synopsis: "create a data store in &AHI;, import DICOM files, and download image frames.\nA workflow implementation performs the following steps."
+  synopsis: |
+   import DICOM files and download image frames in &AHI.
+   The implementation is structured as a workflow command-line application.
+
   synopsis_list:
     - Set up resources for a DICOM import.
     - Import DICOM files into a data store.
