--- a/.doc_gen/metadata/iot_metadata.yaml
+++ b/.doc_gen/metadata/iot_metadata.yaml
@@ -22,6 +22,14 @@ iot_DescribeEndpoint:
   synopsis: get &IoT; endpoint information.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.describe.endpoint.main
     Rust:
       versions:
         - sdk_version: 1
