--- a/.doc_gen/metadata/iot_metadata.yaml
+++ b/.doc_gen/metadata/iot_metadata.yaml
@@ -88,6 +88,22 @@ iot_CreateThings:
                 - iot.java2.create.thing.main
   services:
     iot: {CreateThing}   
+iot_GetShawdow:
+  title: Gets the shadow for the specified thing using an &AWS; SDK
+  title_abbrev: Gets the shadow
+  synopsis: gets the shadow for an &IoT; thing.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/iot
+          excerpts:
+            - description:
+              snippet_tags:
+                - iot.java2.get.shadow.writer.main
+  services:
+    iot: {getThingShadow}       
 iot_UpdateShawdow:
   title: Updates the shadow for the specified thing using an &AWS; SDK
   title_abbrev: Updates the shadow
