Add same dependency for PostgreSQL driver to the real POM file
I believe it's OK to have both dependencies even though only one
database driver would be used for any particular instantiation
of the app.

I specified the latest version (as of January 2024) of the Postgres
driver from the Maven repository: https://mvnrepository.com/artifact/org.postgresql/postgresql

--- a/javav2/usecases/Creating_Spring_RDS_Rest/pom.xml
+++ b/javav2/usecases/Creating_Spring_RDS_Rest/pom.xml
@@ -85,6 +85,11 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.1</version>
+        </dependency>
+        <dependency>
             <groupId>net.sourceforge.jexcelapi</groupId>
             <artifactId>jxl</artifactId>
             <version>2.6.10</version>
