--- a/.doc_gen/metadata/medical-imaging_metadata.yaml
+++ b/.doc_gen/metadata/medical-imaging_metadata.yaml
@@ -18,6 +18,7 @@ medical-imaging_Hello:
       versions:
         - sdk_version: 1
           github: cpp/example_code/medical-imaging/hello_health_imaging
+          github_note_at_bottom: true
           excerpts:
             - description: Code for the CMakeLists.txt CMake file.
               snippet_tags:
@@ -243,6 +244,7 @@ medical-imaging_StartDICOMImportJob:
       versions:
         - sdk_version: 1
           github: cpp/example_code/medical-imaging/
+          github_note_at_bottom: true
           excerpts:
             - description:
               snippet_tags:
@@ -286,6 +288,7 @@ medical-imaging_GetDICOMImportJob:
       versions:
         - sdk_version: 1
           github: cpp/example_code/medical-imaging/
+          github_note_at_bottom: true
           excerpts:
             - description:
               snippet_tags:
@@ -394,6 +397,7 @@ medical-imaging_SearchImageSets:
       versions:
         - sdk_version: 1
           github: cpp/example_code/medical-imaging/
+          github_note_at_bottom: true
           excerpts:
             - description: The utility function for searching image sets.
               snippet_tags:
@@ -488,11 +492,12 @@ medical-imaging_GetImageSetMetadata:
           excerpts:
             - description:
               snippet_tags:
-                - medicalimaging.java2.get_imageset.main
+                - medicalimaging.java2.get_imageset_metadata.main
     C++:
       versions:
         - sdk_version: 1
           github: cpp/example_code/medical-imaging/
+          github_note_at_bottom: true
           excerpts:
             - description: Utility function to get image set metadata.
               snippet_tags:
@@ -542,6 +547,7 @@ medical-imaging_GetImageFrame:
       versions:
         - sdk_version: 1
           github: cpp/example_code/medical-imaging/
+          github_note_at_bottom: true
           excerpts:
             - description:
               snippet_tags:
@@ -708,6 +714,7 @@ medical-imaging_DeleteImageSet:
       versions:
         - sdk_version: 1
           github: cpp/example_code/medical-imaging/
+          github_note_at_bottom: true
           excerpts:
             - description:
               snippet_tags:
@@ -994,7 +1001,7 @@ medical-imaging_Scenario_TaggingImageSets:
 medical-imaging_Scenario_ImageSetsAndFrames:
   title: Get started with &AHI; image sets and image frames using an &AWS; SDK
   title_abbrev: Get started with image sets and image frames
-  synopsis: get started with &AHI; image sets and image frames.
+  synopsis: import DICOM files and download image frames in &AHI;.<para>The implementation is structured as a workflow command-line application.</para>
   synopsis_list:
     - Set up resources for a DICOM import.
     - Import DICOM files into a data store.
@@ -1008,8 +1015,9 @@ medical-imaging_Scenario_ImageSetsAndFrames:
       versions:
         - sdk_version: 1
           github: cpp/example_code/medical-imaging/imaging_set_and_frames_workflow
+          github_note_at_bottom: true
           excerpts:
-            - description: Create a &CFN; stack with the necessary resources.
+            - description: Create an &CFN; stack with the necessary resources.
               snippet_tags:
                 - cpp.example_code.medical-imaging.image-sets-workflow.createstack
             - description: Copy DICOM files to the &S3; import bucket.
@@ -1028,7 +1036,7 @@ medical-imaging_Scenario_ImageSetsAndFrames:
               snippet_tags:
                 - cpp.example_code.medical-imaging.image-sets-workflow.get_image_frames
                 - cpp.example_code.medical_imaging.GetImageSetMetadata
-            - description: Download decode and verify image frames.
+            - description: Download, decode and verify image frames.
               snippet_tags:
                 - cpp.example_code.medical-imaging.image-sets-workflow.download_frames
                 - cpp.example_code.medical-imaging.image-sets-workflow.decode_and_check
