--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -37,3 +37,21 @@ jobs:
           VALIDATE_RUBY: true
           VALIDATE_KOTLIN: true
           VALIDATE_BASH: true
+  yamllint:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: checkout repo content
+        uses: actions/checkout@v3 # checkout the repository content to github runner.
+      - name: setup python
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.11 #install the python needed
+      - name: Install dependencies
+        run: >-
+          python3 -m pip install -r .tools/base_requirements.txt
+      - name: Lint metadata files
+        run: >-
+          yamllint --format standard -c .tools/validation/.yamllint.yaml .doc_gen/metadata
