--- a/rustv1/examples/cloudwatchlogs/Cargo.toml
+++ b/rustv1/examples/cloudwatchlogs/Cargo.toml
@@ -19,3 +19,5 @@ clap = { version = "~4.4", features = ["derive"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 chrono = "0.4.32"
 aws-smithy-runtime-api = "1.1.4"
+tracing = "0.1.40"
+async-recursion = "1.0.5"
