--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -791,3 +791,7 @@ cross_ServerlessPromptChaining:
   service_main: bedrock
   services:
     bedrock:
+    bedrock-runtime:
+    bedrock-agent:
+    bedrock-agent-runtime:
+    sfn:
