--- a/.doc_gen/metadata/dynamodb_metadata.yaml
+++ b/.doc_gen/metadata/dynamodb_metadata.yaml
@@ -183,6 +183,14 @@ dynamodb_BatchGetItem:
   synopsis: get a batch of &DDB; items.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/dynamodb
+          excerpts:
+            - description:
+              snippet_tags:
+                - dynamodb.java2.batch.get.items.main
     .NET:
       versions:
         - sdk_version: 3
@@ -376,6 +384,9 @@ dynamodb_BatchWriteItem:
           github: javav2/example_code/dynamodb/
           sdkguide:
           excerpts:
+            - description: Inserts many items into a table by using the service client.
+              snippet_tags:
+                - dynamodb.java2.batch.write.items.main
             - description: Inserts many items into a table by using the enhanced client.
               snippet_tags:
                 - dynamodb.java2.mapping.batchitems.main
